--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -667,13 +667,18 @@
       "8\n",
       "13\n",
       "21\n",
-      "34\n"
+      "34\n",
+      "55\n",
+      "89\n",
+      "144\n",
+      "233\n",
+      "377\n"
      ]
     }
    ],
    "source": [
     "# print the first 10 febonacci series numbers\n",
-    "n=10\n",
+    "n=15\n",
     "f=0\n",
     "s=1\n",
     "i=0\n",
@@ -682,23 +687,20 @@
     "        res=i\n",
     "    else:\n",
     "        res=f+s\n",
-    "        f=s\n",
-    "        s=res\n",
-    "    print(res)\n",
-    "    i+=1"
+    "        f,s=s,res\n",
+    "    i+=1\n",
+    "    print(res)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
       "1\n",
       "2\n",
       "3\n",
@@ -709,16 +711,16 @@
    ],
    "source": [
     "#wap to print febonacci series upto n\n",
-    "n=10\n",
+    "n=5\n",
     "b=n\n",
     "f=0\n",
     "s=1\n",
-    "print(f)\n",
-    "print(s)\n",
+    "# print(f)\n",
+    "# print(s)\n",
     "while n:\n",
     "    res=f+s\n",
-    "    if res<b:\n",
-    "        print(res)\n",
+    "    # if res<b:\n",
+    "    print(res)\n",
     "    f,s=s,res\n",
     "    n-=1\n"
    ]
@@ -2170,6 +2172,354 @@
     "    c+=1\n",
     "    # print(b)\n",
     "print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "180\n"
+     ]
+    }
+   ],
+   "source": [
+    "n=[0,6,3,10,2,0,0,1]\n",
+    "# x=0\n",
+    "# l=n[x]\n",
+    "# sum=[]\n",
+    "sum=1\n",
+    "a=0\n",
+    "while a<3:\n",
+    "    x=0\n",
+    "    l=n[x]\n",
+    "    while x<len(n):\n",
+    "        if n[x]>l:\n",
+    "            l=n[x]\n",
+    "        x+=1\n",
+    "    # print(l)\n",
+    "    # sum+=[l]\n",
+    "    sum*=l\n",
+    "    ab=0\n",
+    "    pos=0\n",
+    "    while ab<len(n):\n",
+    "        if n[ab]!=l:\n",
+    "            pos+=1\n",
+    "        else:\n",
+    "            del n[pos]\n",
+    "            break\n",
+    "        ab+=1\n",
+    "    # print(pos)\n",
+    "    # print(n)\n",
+    "    a+=1\n",
+    "print(sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to find the largest occurense in given string.\n",
+    "#most repeated char\n",
+    "st='heLLoworLd'\n",
+    "res={}\n",
+    "start=0\n",
+    "while start<len(st):\n",
+    "    if st[start] not in res:\n",
+    "        res[st[start]]=1\n",
+    "    else:\n",
+    "        res[st[start]]+=1\n",
+    "    start+=1\n",
+    "# print(res)\n",
+    "d=list(res)\n",
+    "small=0\n",
+    "ch=''\n",
+    "# print(d)\n",
+    "i=0\n",
+    "while i<len(d):\n",
+    "    if small<res[d[i]]:\n",
+    "        small=res[d[i]]\n",
+    "        ch=d[i]\n",
+    "    i+=1\n",
+    "print(ch,small)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['h', 'e', 'l', 'l', 'o', 'w', 'o', 'r', 'l', 'd']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to store the each character from given string in list\n",
+    "a='helloworld'\n",
+    "b=[]\n",
+    "b+=a\n",
+    "print(b)\n",
+    "#------------------or\n",
+    "# c=list(a)\n",
+    "# print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#wap extract and store the each data item from  list and store in string\n",
+    "a=['h','e','l','l','o','w','o','r','l','d']\n",
+    "b="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "~\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to find the highest char in given string\n",
+    "n='dfssdfsz$~'\n",
+    "x=0\n",
+    "l=n[x]\n",
+    "while x<len(n):\n",
+    "        if n[x]>l:\n",
+    "            l=n[x]\n",
+    "        x+=1\n",
+    "print(l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to find the lowest char in given string\n",
+    "n='dfssdfsz$~'\n",
+    "x=0\n",
+    "l=n[x]\n",
+    "while x<len(n):\n",
+    "        if n[x]<l:\n",
+    "            l=n[x]\n",
+    "        x+=1\n",
+    "print(l)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "49\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to find the largest number in given list\n",
+    "l=[1,2,4.3,48,49,100+3j]\n",
+    "i=0\n",
+    "high=0\n",
+    "while i<len(n):\n",
+    "        if type(l[i]) in [int,float] and high<l[i]:\n",
+    "                high=l[i]\n",
+    "        i+=1\n",
+    "print(high)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c 80\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract largest num from dict\n",
+    "d={'a':10,'b':50,'c':80,'e':5,'f':8}\n",
+    "t=list(d)\n",
+    "i=0\n",
+    "high=0\n",
+    "ch=None\n",
+    "while i<len(t):\n",
+    "        if type(d[t[i]]) in [int,float] and high<d[t[i]]:\n",
+    "                high=d[t[i]]\n",
+    "                ch=t[i]\n",
+    "        i+=1\n",
+    "print(ch,high)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#wap to extract lowest num from dict\n",
+    "d={'a':10,'b':50,'c':80,'e':5,'f':8}\n",
+    "t=list(d)\n",
+    "i=0\n",
+    "low=d[t[0]]\n",
+    "ch=None\n",
+    "while i<len(t):\n",
+    "        if type(d[t[i]]) in [int,float] and low>d[t[i]]:\n",
+    "                low=d[t[i]]\n",
+    "                ch=t[i]\n",
+    "        i+=1\n",
+    "print(ch,low)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello Haii World Welv3Come To Py$Hon Clas'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#wap to convert given string to tittle case\n",
+    "#each word starting character should be uppercase\n",
+    "#after ascii num char and special char the next character should in uppercase\n",
+    "#tha last character should be lowercase\n",
+    "#each word starting char should be uppercase and remaining should be lowercase\n",
+    "'hello haIi World WelV3coMe to py$hon cLAs'.title()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$Dsfaad#Jl38 Dsf #Sd#Ljj Ads G\n"
+     ]
+    }
+   ],
+   "source": [
+    "# n='#@aizen so#@#suke ichigo'\n",
+    "# n='Hello haIi World WelV3coMe to py$hon cLAs'\n",
+    "# n='$dsfAAD#jl38'\n",
+    "n='$dsfAAD#jl38 dsf #sd#ljj Ads g'\n",
+    "s=''\n",
+    "i=0\n",
+    "\n",
+    "while i<len(n):\n",
+    "    if not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' or '0'<=n[i]<='9'):\n",
+    "        s+=n[i]\n",
+    "        # print(s)\n",
+    "    elif '0'<=n[i]<='9':\n",
+    "        s+=n[i]\n",
+    "    elif 'A'<=n[i]<='Z' and i==0:\n",
+    "        s+=n[i]\n",
+    "\n",
+    "    else:\n",
+    "        if 'a'<=n[i]<='z' and i==0:\n",
+    "            s+=chr(ord(n[i])-32)\n",
+    "        if  not ('a'<=n[i-1]<='z' or 'A'<=n[i-1]<='Z' or '0'<=n[i-1]<='9') and 'a'<=n[i]<='z':\n",
+    "            s+=chr(ord(n[i])-32)\n",
+    "        elif  not ('a'<=n[i-1]<='z' or 'A'<=n[i-1]<='Z' or '0'<=n[i-1]<='9') and 'A'<=n[i]<='Z':\n",
+    "            s+=n[i]\n",
+    "        elif 'A'<=n[i-1]<='Z' and not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' or '0'<=n[i]<='9'):\n",
+    "            s+=n[i]\n",
+    "        elif 'A'<=n[i-1]<='Z' and 'A'<=n[i]<='Z' :\n",
+    "            s+=chr(ord(n[i])+32)\n",
+    "        elif 'a'<=n[i-1]<='z' and 'A'<=n[i]<='Z' :\n",
+    "            s+=chr(ord(n[i])+32)\n",
+    "\n",
+    "        else:\n",
+    "            s+=n[i]\n",
+    "    # print(s)\n",
+    "    i+=1\n",
+    "print(s)\n",
+    "# print('Hello Haii World Welv3Come To Py$Hon Clas')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'$Dsfaad#Jl38 Dsf #Sd#Ljj Ads G'"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'$dsfAAD#jl38 dsf #sd#ljj Ads g'.title()"
    ]
   }
  ],
