--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -985,25 +985,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 not a prime number\n",
       "1 is prime number\n",
       "2 is prime number\n",
       "3 is prime number\n",
-      "4 not a prime number\n",
-      "5 is prime number\n"
+      "5 is prime number\n",
+      "7 is prime number\n"
      ]
     }
    ],
    "source": [
     "n1=0\n",
-    "n2=5\n",
+    "n2=10\n",
     "while n1<=n2:\n",
     "    n=n1\n",
     "    a=1\n",
@@ -1014,8 +1013,9 @@
     "        a+=1\n",
     "    if 1<=count<=2:\n",
     "        print(f'{n} is prime number')\n",
-    "    else:\n",
-    "        print(f'{n} not a prime number')\n",
+    "    # else:\n",
+    "        # print(f'{n} not a prime number')\n",
+    "        \n",
     "    n1+=1"
    ]
   },
@@ -2230,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2242,13 +2242,14 @@
     }
    ],
    "source": [
-    "n=[0,6,3,10,2,0,0,1]\n",
+    "n=[0,6,3,10,2,0,0]\n",
+    "# print(sorted(n))\n",
     "# x=0\n",
     "# l=n[x]\n",
     "# sum=[]\n",
     "sum=1\n",
-    "a=0\n",
-    "while a<3:\n",
+    "a=3\n",
+    "while a:\n",
     "    x=0\n",
     "    l=n[x]\n",
     "    while x<len(n):\n",
@@ -2264,12 +2265,13 @@
     "        if n[ab]!=l:\n",
     "            pos+=1\n",
     "        else:\n",
+    "            # print(pos)\n",
     "            del n[pos]\n",
     "            break\n",
     "        ab+=1\n",
     "    # print(pos)\n",
     "    # print(n)\n",
-    "    a+=1\n",
+    "    a-=1\n",
     "print(sum)\n"
    ]
   },
@@ -2287,38 +2289,6 @@
     "        l=n[x]\n",
     "    x+=1\n",
     "print(l)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
-   "source": [
-    "# a=[0,6,3,1000,2,0,10,0,1]\n",
-    "# res=0\n",
-    "# b=0\n",
-    "# sum=1\n",
-    "# while b<len(a):\n",
-    "#     if res<a[b]:\n",
-    "#         j=a[b]\n",
-    "#     b+=1\n",
-    "# print(j)\n",
-    "# c=0\n",
-    "# while c<len(a):\n",
-    "#     if res<a[c] and a[c]<j:\n",
-    "#         k=a[c]\n",
-    "#     c+=1\n",
-    "# # print(k)\n",
     "\n"
    ]
   },
