--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -2277,23 +2277,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n=[0,6,3,1000,2,0,10,0,1]\n",
-    "x=0\n",
-    "l=n[x]\n",
-    "while x<len(n):\n",
-    "    if n[x]>l:\n",
-    "        l=n[x]\n",
-    "    x+=1\n",
-    "print(l)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [
@@ -2309,6 +2292,523 @@
     "a=[0,6,10,3,2,0,1]\n",
     "b=sorted(a)\n",
     "print(b[-1]*b[-2]*b[-3])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "s\n",
+      "t\n",
+      "r\n",
+      "i\n",
+      "n\n",
+      "g\n"
+     ]
+    }
+   ],
+   "source": [
+    "#59.wap to print all the items present in the string b/w the range from m to n\n",
+    "st='sstring'\n",
+    "m=0\n",
+    "n=len(st)\n",
+    "while m<n:\n",
+    "    print(st[m])\n",
+    "    m+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D\n",
+      "S\n",
+      "F\n",
+      "G\n",
+      "K\n"
+     ]
+    }
+   ],
+   "source": [
+    "#60.wap to print the uppercase char's in given string\n",
+    "st='DSFjdskGKdf'\n",
+    "i=0\n",
+    "while i<len(st):\n",
+    "    if 'A'<=st[i]<='Z':\n",
+    "        print(st[i])\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "j\n",
+      "d\n",
+      "s\n",
+      "k\n",
+      "d\n",
+      "f\n"
+     ]
+    }
+   ],
+   "source": [
+    "#61.wap to print the lowercase char's in given string\n",
+    "st='DSFjdskGKdf'\n",
+    "i=0\n",
+    "while i<len(st):\n",
+    "    if 'a'<=st[i]<='z':\n",
+    "        print(st[i])\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#62.wap to print the ascii num char's in given string\n",
+    "st='45dskGK430df'\n",
+    "i=0\n",
+    "while i<len(st):\n",
+    "    if '0'<=st[i]<='9':\n",
+    "        print(st[i])\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "/\n",
+      "$\n",
+      "#\n"
+     ]
+    }
+   ],
+   "source": [
+    "#63.wap to print special char's in given string\n",
+    "st='./45d$#K'\n",
+    "i=0\n",
+    "while i<len(st):\n",
+    "    if not('0'<=st[i]<='9' or 'a'<=st[i]<='z' or 'A'<=st[i]<='Z'):\n",
+    "        print(st[i])\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "a\n",
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "#64.wap to print vowels in given string\n",
+    "st='imran khan'\n",
+    "i=0\n",
+    "while i<len(st):\n",
+    "    if st[i] in 'aeioouAEIOU':\n",
+    "        print(st[i])\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "m\n",
+      "r\n",
+      "n\n",
+      " \n",
+      "k\n",
+      "h\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "#65.wap to print CONSONENTS in given string\n",
+    "st='imran khan'\n",
+    "i=0\n",
+    "while i<len(st):\n",
+    "    if st[i] not in 'aeioouAEIOU':\n",
+    "        print(st[i])\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "654321\n",
+      "654321\n"
+     ]
+    }
+   ],
+   "source": [
+    "#66.wap to reverse the string\n",
+    "st='123456'\n",
+    "i=1\n",
+    "rev=''\n",
+    "# print(st[::-1])\n",
+    "while i<=len(st):\n",
+    "    rev+=st[-i]\n",
+    "    i+=1\n",
+    "print(rev)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f\n",
+      "j\n",
+      "j\n"
+     ]
+    }
+   ],
+   "source": [
+    "#67.wap to print even position characters in given string\n",
+    "st='dsfkjlj;'\n",
+    "i=1\n",
+    "while i<len(st):\n",
+    "    if i%2==0:\n",
+    "        print(st[i])\n",
+    "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n",
+      "k\n",
+      "l\n",
+      ";\n"
+     ]
+    }
+   ],
+   "source": [
+    "#68.wap to print odd position characters in given string\n",
+    "st='dsfkjlj;'\n",
+    "i=1\n",
+    "while i<len(st):\n",
+    "    if i%2==1:\n",
+    "        print(st[i])\n",
+    "    i+=1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#69. wap to find number of char's in string using length function\n",
+    "st='sstring'\n",
+    "i=0\n",
+    "count=0\n",
+    "while i<len(st):\n",
+    "    count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#70. wap to find number of char's in string without using length function\n",
+    "st='sstring'\n",
+    "count=0\n",
+    "while st:\n",
+    "    count+=1\n",
+    "    st=st[:-1]\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#71.wap to count alphabets in given string\n",
+    "a='34string$@#'\n",
+    "count=0\n",
+    "i=0\n",
+    "while  i<len(a):\n",
+    "    if 'a'<=a[i]<='z' or 'A'<=a[i]<='Z':\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#72.wap to count uppercase char's in given string\n",
+    "a='34sstrING$@#'\n",
+    "count=0\n",
+    "i=0\n",
+    "while  i<len(a):\n",
+    "    if  'A'<=a[i]<='Z':\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#73.wap to count loweercase char's in given string\n",
+    "a='34sstrING$@#'\n",
+    "count=0\n",
+    "i=0\n",
+    "while  i<len(a):\n",
+    "    if  'a'<=a[i]<='z':\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#74.wap to count special char's in given string\n",
+    "a='34strING$@#'\n",
+    "count=0\n",
+    "i=0\n",
+    "while  i<len(a):\n",
+    "    if  not('A'<=a[i]<='Z' or 'a'<=a[i]<='z' or '0'<=a[i]<='9'):\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#75.wap to count uppercase char's in given string\n",
+    "a='34strING$@#'\n",
+    "count=0\n",
+    "i=0\n",
+    "while  i<len(a):\n",
+    "    if 'A'<=a[i]<='Z' or 'a'<=a[i]<='z' :\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#76.wap to count number of ascii numbers char's in given string\n",
+    "a='34sstrING$@#'\n",
+    "count=0\n",
+    "i=0\n",
+    "while  i<len(a):\n",
+    "    if  '0'<=a[i]<='9':\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#77.wap to count Total number of Words in a string\n",
+    "a='  imran khan  '\n",
+    "# a=' (* hkj ())'\n",
+    "print(len(a.split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i\n",
+      "m\n",
+      "r\n",
+      "a\n",
+      "n\n",
+      " \n",
+      "k\n",
+      "h\n",
+      "a\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "#77.wap to count Total number of Words in a string\n",
+    "a='imran khan'\n",
+    "i=0\n",
+    "count=0\n",
+    "# while i<len(a):\n",
+    "    # if a[0]!=''\n",
+    "    # i+=1\n"
    ]
   }
  ],
