--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -2398,7 +2398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2426,16 +2426,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello Haii World Welv3Come To Py$Hon Clas'"
+       "'Hello Haii World Welv3C*Ome To Py$Hon Clas'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2446,19 +2446,19 @@
     "#after ascii num char and special char the next character should in uppercase\n",
     "#tha last character should be lowercase\n",
     "#each word starting char should be uppercase and remaining should be lowercase\n",
-    "'hello haIi World WelV3coMe to py$hon cLAs'.title()"
+    "'hello haIi World WelV3c*oMe to py$hon cLAs'.title()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$Dsfaad#Jl38 Dsf #Sd#Ljj Ads G\n"
+      "Gh45$Dsfaad#Jl38Jj Dsf Gfg687(&(*Ghyuf09)) #Sd#Ljj Ads G\n"
      ]
     }
    ],
@@ -2466,28 +2466,18 @@
     "# n='#@aizen so#@#suke ichigo'\n",
     "# n='Hello haIi World WelV3coMe to py$hon cLAs'\n",
     "# n='$dsfAAD#jl38'\n",
-    "n='$dsfAAD#jl38 dsf #sd#ljj Ads g'\n",
+    "n='gh45$dsfAAD#jl38jj dsf gfg687(&(*ghyuf09)) #sd#ljj Ads g'\n",
     "s=''\n",
     "i=0\n",
     "\n",
     "while i<len(n):\n",
-    "    if not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' or '0'<=n[i]<='9'):\n",
+    "    if not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' ):\n",
     "        s+=n[i]\n",
-    "        # print(s)\n",
-    "    elif '0'<=n[i]<='9':\n",
-    "        s+=n[i]\n",
-    "    elif 'A'<=n[i]<='Z' and i==0:\n",
-    "        s+=n[i]\n",
-    "\n",
+    "    elif 'a'<=n[i]<='z' and i==0:\n",
+    "            s+=chr(ord(n[i])-32)\n",
     "    else:\n",
-    "        if 'a'<=n[i]<='z' and i==0:\n",
+    "        if  not ('a'<=n[i-1]<='z' or 'A'<=n[i-1]<='Z' ) and 'a'<=n[i]<='z':\n",
     "            s+=chr(ord(n[i])-32)\n",
-    "        if  not ('a'<=n[i-1]<='z' or 'A'<=n[i-1]<='Z' or '0'<=n[i-1]<='9') and 'a'<=n[i]<='z':\n",
-    "            s+=chr(ord(n[i])-32)\n",
-    "        elif  not ('a'<=n[i-1]<='z' or 'A'<=n[i-1]<='Z' or '0'<=n[i-1]<='9') and 'A'<=n[i]<='Z':\n",
-    "            s+=n[i]\n",
-    "        elif 'A'<=n[i-1]<='Z' and not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' or '0'<=n[i]<='9'):\n",
-    "            s+=n[i]\n",
     "        elif 'A'<=n[i-1]<='Z' and 'A'<=n[i]<='Z' :\n",
     "            s+=chr(ord(n[i])+32)\n",
     "        elif 'a'<=n[i-1]<='z' and 'A'<=n[i]<='Z' :\n",
@@ -2495,32 +2485,76 @@
     "\n",
     "        else:\n",
     "            s+=n[i]\n",
-    "    # print(s)\n",
     "    i+=1\n",
-    "print(s)\n",
-    "# print('Hello Haii World Welv3Come To Py$Hon Clas')\n",
-    "    "
+    "print(s)    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gh45$Dsfaad#Jl38Jj Dsf Gfg687(&(*Ghyuf09)) #Sd#Ljj Ads G\n"
+     ]
+    }
+   ],
+   "source": [
+    "# n='#@aizen so#@#suke ichigo'\n",
+    "# n='Hello haIi World WelV3coMe to py$hon cLAs'\n",
+    "# n='$dsfAAD#jl38'\n",
+    "n='gh45$dsfAAD#jl38jj dsf gfg687(&(*ghyuf09)) #sd#ljj Ads g'\n",
+    "s=''\n",
+    "i=0\n",
+    "\n",
+    "while i<len(n):\n",
+    "    if not ('a'<=n[i]<='z' or 'A'<=n[i]<='Z' ):\n",
+    "        s+=n[i]\n",
+    "    elif 'a'<=n[i]<='z' and i==0:\n",
+    "            s+=chr(ord(n[i])-32)\n",
+    "    else:\n",
+    "        if  not ('a'<=n[i-1]<='z' or 'A'<=n[i-1]<='Z') and 'a'<=n[i]<='z':\n",
+    "            s+=chr(ord(n[i])-32)\n",
+    "        elif 'A'<=n[i-1]<='Z' and 'A'<=n[i]<='Z' :\n",
+    "            s+=chr(ord(n[i])+32)\n",
+    "        elif 'a'<=n[i-1]<='z' and 'A'<=n[i]<='Z' :\n",
+    "            s+=chr(ord(n[i])+32)\n",
+    "        else:\n",
+    "            s+=n[i]\n",
+    "    i+=1\n",
+    "print(s)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'$Dsfaad#Jl38 Dsf #Sd#Ljj Ads G'"
+       "'$Dsfaad#Jl38Jj Dsf #Sd#Ljj Ads G'"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'$dsfAAD#jl38 dsf #sd#ljj Ads g'.title()"
+    "'$dsfAAD#jl38jj dsf #sd#ljj Ads g'.title()\n",
+    "# '45$&79*&*^^48'.title()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
