--- a/py_course/flow_control_statements/1.Decisional&Conditional_statements/5.match_case.ipynb
+++ b/py_course/flow_control_statements/1.Decisional&Conditional_statements/5.match_case.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -259,19 +259,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('A', 'a')\n"
+      "('a', 97)\n"
      ]
     }
    ],
    "source": [
-    "a='a' #---using TURNARY_OPERATOR\n",
+    "a='A' #---using TURNARY_OPERATOR\n",
     "print([(a,ord(a)),[(chr(ord(a)-32),a),(chr(ord(a)+32),ord(chr(ord(a)+32)))]['A'<=a<='Z']]['a'<=a<='z' or 'A'<=a<='Z'])\n"
    ]
   },
