--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -2781,34 +2781,445 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "i\n",
-      "m\n",
-      "r\n",
-      "a\n",
-      "n\n",
-      " \n",
-      "k\n",
-      "h\n",
-      "a\n",
-      "n\n"
+      "2\n"
      ]
     }
    ],
    "source": [
     "#77.wap to count Total number of Words in a string\n",
-    "a='imran khan'\n",
+    "# a='   imran  khan  ##$2dfs #$@ 3243dfjkl'\n",
+    "a='abc def'\n",
     "i=0\n",
     "count=0\n",
-    "# while i<len(a):\n",
-    "    # if a[0]!=''\n",
-    "    # i+=1\n"
+    "s=1\n",
+    "if a[0]!=' ' and a[-1]!=' ':\n",
+    "    count=1\n",
+    "while i<len(a): \n",
+    "    if a[i-1]!=' ' and a[i]==' ':\n",
+    "        count+=1\n",
+    "\n",
+    "    i+=1\n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#78.wap to count Total Number of spaces in a string.\n",
+    "# a='imran khan ##$2dfs #$@ 3243 dfjkl'\n",
+    "i=0\n",
+    "count=0\n",
+    "while i<len(a):\n",
+    "    if a[i]==' ':\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#79.wap to count vowels in given string\n",
+    "st='imran khan'\n",
+    "i=0\n",
+    "count=0\n",
+    "while i<len(st):\n",
+    "    if st[i] in 'aeioouAEIOU':\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#80.wap to count consonents in given string\n",
+    "st='imran khan'\n",
+    "i=0\n",
+    "count=0\n",
+    "while i<len(st):\n",
+    "    if 'a'<=st[i]<='z' or 'A'<=st[i]<='Z':\n",
+    "        if st[i] not in 'aeioouAEIOU' :\n",
+    "            count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#81.wap to count vowels and consonents in given string\n",
+    "st='imran khan'\n",
+    "i=0\n",
+    "count=0\n",
+    "while i<len(st):\n",
+    "    if 'a'<=st[i]<='z' or 'A'<=st[i]<='Z':\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "#82. wap to count number of new lines in a given string\n",
+    "a='dfsjk\\n dsjklj\\n sdf\\ndfs'\n",
+    "i=0\n",
+    "count=0\n",
+    "while i<len(a):\n",
+    "    if a[i]=='\\n':\n",
+    "        count+=1\n",
+    "    i+=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#83. wap to count number of lines in a given string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "alphabets 4\n",
+      "numbers 4\n",
+      "special characters 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#84.wap to count no of alphabets,numbers,special char's in given string\n",
+    "a='sDGf @#@#$ 1234'\n",
+    "i=0\n",
+    "alphabet=0\n",
+    "num=0\n",
+    "spel=0\n",
+    "while i<len(a):\n",
+    "    if 'a'<=a[i]<='z' or 'A'<=a[i]<='Z':\n",
+    "        alphabet+=1\n",
+    "    elif '0'<=a[i]<='9':\n",
+    "        num+=1\n",
+    "    else:\n",
+    "        spel+=1\n",
+    "    i+=1\n",
+    "print(f'alphabets {alphabet}')\n",
+    "print(f'numbers {num}')\n",
+    "print(f'special characters {spel}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "#85.wap to count Total no of words in  Doc_string\n",
+    "a='''abc def\n",
+    "fdjh adfj 324u\n",
+    "3248u 2394j'''\n",
+    "# a='fds dfs hjh ghj hkh hjhkj'\n",
+    "i=0\n",
+    "count=0\n",
+    "s=1\n",
+    "if a[0]!=' ' and a[-1]!=' ':\n",
+    "    count=1\n",
+    "while i<len(a): \n",
+    "    if a[i]=='\\n':\n",
+    "        count+=1\n",
+    "    if a[i-1]!=' ' and a[i]==' ':\n",
+    "        count+=1\n",
+    "\n",
+    "    i+=1\n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#85.wap to count Total no  of words in a forst line of Doc_string\n",
+    "n='''abc def dsfs dfs gjhg\n",
+    "fdjh adfj 324u\n",
+    "3248u 2394j'''\n",
+    "# a='''fds dfs hjh ghj hkh hjhkj'''\n",
+    "x=0\n",
+    "a=''\n",
+    "while x<len(n):\n",
+    "    a+=n[x]\n",
+    "    if n[x]=='\\n':\n",
+    "        break\n",
+    "    x+=1\n",
+    "i=0\n",
+    "count=0\n",
+    "s=1\n",
+    "if a[0]!=' ' and a[-1]!=' ':\n",
+    "    count=1\n",
+    "while i<len(a): \n",
+    "    if a[i-1]!=' ' and a[i]==' ':\n",
+    "        count+=1\n",
+    "\n",
+    "    i+=1\n",
+    "print(count)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "#86.wap to sum of digits in a given string\n",
+    "a='01dsf 45jhg 5jk'\n",
+    "sum=0\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if '0'<=a[i]<='9':\n",
+    "        sum+=int(a[i])\n",
+    "    i+=1\n",
+    "print(sum) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k\n"
+     ]
+    }
+   ],
+   "source": [
+    "#87. wap to print First Occurence of a character in a string\n",
+    "a='heko wkorld'\n",
+    "first=''\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if a[i] in first:\n",
+    "        print(a[i])\n",
+    "        break\n",
+    "    else:\n",
+    "        first+=a[i]\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n"
+     ]
+    }
+   ],
+   "source": [
+    "#88. wap to print last Occurence of a character in a string\n",
+    "a='heko wkorld'\n",
+    "first=''\n",
+    "i=0\n",
+    "last=''\n",
+    "while i<len(a):\n",
+    "    if a[i] in first:\n",
+    "        last=a[i]\n",
+    "    else:\n",
+    "        first+=a[i]\n",
+    "    i+=1\n",
+    "print(last)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#89. wap to print first not Occurence of a character in a string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#90. wap to print last not Occurence of a character in a string\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k\n",
+      "helo world\n"
+     ]
+    }
+   ],
+   "source": [
+    "#91. wap to remove first Occurence of a character in a string\n",
+    "a='helko wkorld'\n",
+    "first=''\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if a[i] in first:\n",
+    "        rep=a[i]\n",
+    "        print(a[i])\n",
+    "        break\n",
+    "    else:\n",
+    "        first+=a[i]\n",
+    "    i+=1\n",
+    "i=0\n",
+    "st=''\n",
+    "while i<len(a):\n",
+    "    if rep!=a[i]:\n",
+    "        st+=a[i]\n",
+    "    i+=1\n",
+    "print(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "heko wkord\n"
+     ]
+    }
+   ],
+   "source": [
+    "#92. wap to remove last Occurence of a character in a string\n",
+    "a='helko wkorld'\n",
+    "first=''\n",
+    "i=0\n",
+    "while i<len(a):\n",
+    "    if a[i] in first:\n",
+    "        rep=a[i]\n",
+    "        # print(a[i])\n",
+    "    else:\n",
+    "        first+=a[i]\n",
+    "    i+=1\n",
+    "print(rep)\n",
+    "i=0\n",
+    "st=''\n",
+    "while i<len(a):\n",
+    "    if rep!=a[i]:\n",
+    "        st+=a[i]\n",
+    "    i+=1\n",
+    "print(st)"
    ]
   }
  ],
