--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/practice.ipynb
@@ -2019,13 +2019,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "psi\n",
       "p\n",
       "lol\n"
      ]
@@ -2039,12 +2040,13 @@
     "b=0\n",
     "u=''\n",
     "while b<len(a):\n",
-    "    if a[b] in s:\n",
-    "        u+=a[b]\n",
-    "    else:\n",
+    "    if a[b] in u:\n",
     "        s+=a[b]\n",
+    "    else:\n",
+    "        u+=a[b]\n",
     "    b+=1\n",
     "print(u)\n",
+    "print(s)\n",
     "#------------------\n",
     "st='helloworld'\n",
     "uni=''\n",
@@ -2057,21 +2059,6 @@
     "        dup+=st[b]\n",
     "    b+=1\n",
     "print(dup)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# st='helloworld'\n",
-    "# v=''\n",
-    "# b=0\n",
-    "# while b<len(st):\n",
-    "#     if st[b] in v:\n",
-    "\n",
-    "#     b+=1"
    ]
   },
   {
