--- a/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/while_loop/assignment.ipynb
@@ -2781,7 +2781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2795,11 +2795,14 @@
    "source": [
     "#77.wap to count Total number of Words in a string\n",
     "# a='   imran  khan  ##$2dfs #$@ 3243dfjkl'\n",
-    "a='abc def'\n",
+    "# a=' tfdeyh jffdryh f#Kit4bgfuhiy otrguroj st8irgfkhu  '\n",
+    "# a='   '\n",
+    "a='IMRAN KHAN'\n",
     "i=0\n",
     "count=0\n",
-    "s=1\n",
-    "if a[0]!=' ' and a[-1]!=' ':\n",
+    "if len(a)==0:\n",
+    "    pass\n",
+    "elif a[0]!=' ' and a[-1]!=' ':\n",
     "    count=1\n",
     "while i<len(a): \n",
     "    if a[i-1]!=' ' and a[i]==' ':\n",
